--- a/src/pages/site-create/site-create.html
+++ b/src/pages/site-create/site-create.html
@@ -14,7 +14,7 @@
     </ion-buttons>
   </ion-navbar>
 </ion-header>
-<ion-content padding>
+<ion-content>
   <form [formGroup]="siteForm" (ngSubmit)="save()">
     <ion-card>
       <ion-card-header>
