Changes as per ashutosh

--- a/src/pages/clients/clients.html
+++ b/src/pages/clients/clients.html
@@ -25,7 +25,7 @@
         <img [src]="client.logo">
       </ion-avatar>
       <ng-template #no_image>
-        <img src="assets/images/no_image_available.png" alt="no image"/>
+        <img src="assets/images/no_image_available.png" alt="no image" style="max-width:100px;"/>
       </ng-template>
       <h2 style="white-space: normal;">{{client.name}}</h2>
       <h3 style="white-space: normal;">{{client.address_1}}</h3>
